--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -26,7 +26,7 @@ the software as well.
 
 Select a version 3 game using the File menu
 
-Version 0.7 Preview 2 (2005-11-??)
+Version 0.7 Preview 2 (2005-11-04)
 -----------------------------------
 
 - fixed an issue with keyboard event handling on Mac OS X
