--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -9,6 +9,12 @@ The Z-machine Preservation Project is an attempt to capture and document the
 Z-machine's architecture and design principles and to provide a modern Java
 implementation that can be easily maintained and extended.
 
+Features:
+
+- Written from scratch using Java 5
+- Currently supports story file version 3
+- Save and reads games in Quetzal 1.4 format
+
 For remarks and suggestions for improvements, please contact
 me using the ZMPP project homepage:
 
@@ -26,23 +32,8 @@ the software as well.
 
 Select a version 3 game using the File menu
 
-Version 0.7 Preview 2 (2005-11-04)
------------------------------------
-
-- fixed an issue with keyboard event handling on Mac OS X
-- routine stack and evaluation stack are changed to be lists, the stack
-  pointers are implicit, so there is no fixed stack size anymore
-- call and return scheme simplified
-- restart implemented
-- save and restore implemented (Quetzal 1.4)
-
-
-Version 0.7 Preview 1 (2005-11-02)
-----------------------------------
-
-This is the first public file release. It implements an almost
-complete implementation of the instruction set for the story
-file version 3.
+Supported Infocom games
+----------------------
 
 These games could be successfully started so far:
 
@@ -51,7 +42,12 @@ These games could be successfully started so far:
 - Zork II
 - Leather Godesses Of Phobos
 
+These games have been successfully played through so far:
+
+- Zork I
+
 Operating systems tested on:
+-------------------------
 
 - Linux
 - Windows XP
@@ -62,3 +58,33 @@ Known issues:
 - screen model not fully implemented yet
 - split_screen, split_window not implemented yet
 - save/restore/restart/sound not implemented
+
+/////////////////////////////////////////
+//// History
+///////////////////////
+
+Version 0.7 Preview 3 (2005-11-??)
+-----------------------------------
+
+- fixed an issue with removing objects from inconsistent trees, which caused
+  "Leather goddesses" to freeze at a certain point
+- improvements to the interface
+- handling for header flags 1 and 2
+
+
+Version 0.7 Preview 2 (2005-11-04)
+-----------------------------------
+
+- fixed an issue with keyboard event handling on Mac OS X
+- routine stack and evaluation stack are changed to be lists, the stack
+  pointers are implicit, so there is no fixed stack size anymore
+- call and return scheme simplified
+- restart, save and restore implemented (Quetzal 1.4)
+
+
+Version 0.7 Preview 1 (2005-11-02)
+----------------------------------
+
+This is the first public file release. It implements an almost
+complete implementation of the instruction set for the story
+file version 3.
