updated for Preview 3
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@123 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -78,7 +78,7 @@ Known issues:
 //// History
 ///////////////////////
 
-Version 0.7 Preview 3 (2005-11-??)
+Version 0.7 Preview 3 (2005-11-09)
 -----------------------------------
 
 - fixed an issue with removing objects from inconsistent trees, which caused
