--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,13 +1,17 @@
 Changelog
 
-Version 0.7 Release (2005-11-??)
+Version 0.7 Release (2005-11-16)
 --------------------------------
 
+- feature freeze for this release
 - finally understood the difference between Z characters and ZSCII and
   added ZSCII encoding
 - reduced stream output functions to one that puts out one ZSCII character
 - reduced stream input functions to one that reads one ZSCII character
 - added per-character stream output
+- input and output now handled according to the standard
+- applet frontend created
+- successfully started "Hitchhiker's Guide"
 
 Version 0.7 Preview 3 (2005-11-09)
 -----------------------------------
