--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,5 +1,24 @@
 Changelog
 
+Version 0.72 final
+------------------
+
+- (TODO: will support timed input)
+
+Version 0.72 preview
+--------------------
+
+- translate_packed_address is multiplied by factor 4 in version 4
+- dictionary is created and stored in MachineConfig
+- show_status made illegal for version 4
+- text styles added to the screen model
+- object model extended
+- toggable text buffering
+- instruction decoder extended to allow for up to 8 parameters (evaluate the
+  second optype byte)
+- call_2s, call_1s, call_vs2, set_text_style, buffer_mode implemented
+- screen splitting implemented using a sub window model
+
 Version 0.7 Release (2005-11-16)
 --------------------------------
 
