--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -61,12 +61,13 @@ These games could be successfully started so far:
 
 Version 3:
 
+- Enchanter
+- Hitchhiker's Guide To The Galaxy
+- Leather Godesses Of Phobos
 - Minizork
+- Seastalker
 - Zork I
 - Zork II
-- Leather Godesses Of Phobos
-- Hitchhiker's Guide To The Galaxy
-- Seastalker
 
 Version 4:
 
