last changes for release
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@181 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -27,12 +27,6 @@ http://sourceforge.net/projects/zmpp
 
 TODO:
 
-Screen model
-
-- implement paging in screen model
-
-Other:
-
 - sound_effect not implemented
 
 
@@ -72,6 +66,8 @@ Version 3:
 Version 4:
 
 - A Mind Forever Voyaging
+- Bureaucracy
+- Trinity
 
 These games have been successfully played through so far:
 
