--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -7,9 +7,9 @@ Version 0.72 final (2005-12-07)
 - fixed broken tests, added several more
 - verified screen model
 - paging is disabled if input is from file
-- fix paging: <MORE> had to disappear after key press
+- fixed paging: <MORE> had to disappear after key press
 - fixed scrolling issue in Trinity
-- TODO: fix Bureaucracy behaviour
+- fixed Bureaucracy screen behaviour
 
 Version 0.72 Beta (2005-11-30)
 ------------------------------
