--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -9,6 +9,7 @@ Version 0.72
 - "not" changed to call_1n
 - VAR version of "not" added
 - call_2n, call_vn, call_vn2 added
+- decoding extended instructions added
 
 Version 0.72 final (2005-12-07)
 -------------------------------
