--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -16,6 +16,16 @@ Version 0.74
 - fixed object attribute bug
 - cursor key support added
 - flexible attributes in story file header
+- design and test improvements
+- RoutineContext extended by DISCARD_RESULT
+- extended Quetzal handling by DISCARD_RESULT
+- applet saves games to memory
+- fixed a bug that ignored newlines in unbuffered mode
+- "Curses" runs
+- "Jigsaw" runs
+- check_arg_count, piracy and tokenise
+- V7 and V8 addressing added
+- TODO: make read and tokenise comply to V5 specification
 
 Version 0.72 final (2005-12-07)
 -------------------------------
