change to version 0.83
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@300 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,7 +1,14 @@
 Changelog
 
+Version 0.83
+------------
+
+- core is now based on ZSCII instead of Unicode
+- fixed and tested to be compliant with Swedish.h
+- "Freefall" bug fixed by changing the behaviour of timed input
+
 Version 0.82
------------
+------------
 
 - Standard revision number 1.0 is now set to the header
 - fixed the "missing newline" bug (was a misunderstanding of print_ret)
