--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -16,7 +16,8 @@ Features:
 - currently supports story file version 1, 2, 3, 4, 5, 7 and 8
 - can be run as a Java applet within the web browser
 - saves and reads games in Quetzal 1.4 format
-- reads media in Blorb 1.1 format
+- reads media in Blorb format
+- reads Z code embedded in Blorb files
 - input stream 0 and 1 (keyboard, mouse and file)
 - output streams 1, 2 and 3 (screen, transcript, memory with nesting)
 - split subwindows (paging, buffering, scrolling)
@@ -66,6 +67,8 @@ applet parameters:
 storyfile - the URL of the story file, must be on the same server as the jar file
 blorbfile - the URL of the blorb file, must be on the same server as the jar file
 
+if only the blorb file is specified, the interpreter assumes the story is
+embedded in the blorb file
 
 Operating systems tested on:
 -------------------------
