--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,5 +1,13 @@
 Changelog
 
+Version 0.89
+------------
+- performance tuning (object access, instruction processing)
+- processes meta information
+- no maven builds anymore
+- command history added
+- added multiple undo
+
 Version 0.87
 ------------
 
