updated for release 0.89
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@415 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -3,10 +3,12 @@ Changelog
 Version 0.89
 ------------
 - performance tuning (object access, instruction processing)
-- processes meta information
+- processes and views meta information
 - no maven builds anymore
 - command history added
 - added multiple undo
+- added save to file in applet mode
+- started signing the jar file
 
 Version 0.87
 ------------
